# WebAssemblyWithJava

./: settings.gradle
WebServer/: build.gradle
WebServer/src/main/java/com/khanhdz/JavaWebCore/: App.java
WebServer/www/grrs/: Cargo.toml  readme.MD
WebServer/www/grrs/src/: lib.rs
