[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window'] }
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]